--- a/composer.json
+++ b/composer.json
@@ -26,7 +26,9 @@
             "App\\": "app/",
             "Database\\Factories\\": "database/factories/",
             "Database\\Seeders\\": "database/seeders/"
-        }
+        }, "files":[
+            "app/Http/Helpers/index.php"
+        ]
     },
     "autoload-dev": {
         "psr-4": {
